# Semptify-FastAPI

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  ACTION_CHECKLIST.md  AI_ORCHESTRATION.md  BLUEPRINT.md  DELIVERY_SUMMARY.md  Dockerfile  ENTERPRISE_README.md  Makefile  PRODUCTION.md  QUICKSTART.md  README.md  SEMPTIFY_5.0_ASSESSMENT.md  SYSTEM_EVALUATION_REPORT.md  USER_JOURNEY_GUIDE.md  analyze_nav.py  crawler_report.json  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  test_mcro.py  test_user_flows.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4662caf39763_initial_migration_baseline_schema.py
app/: __init__.py  main.py
app/core/: __init__.py  audit.py  cache.py  config.py  database.py  errors.py  event_bus.py  features.py  logging_config.py  logging_middleware.py  rate_limit.py  role_validation.py  security.py  security_headers.py  sessions.py  shutdown.py  storage_middleware.py  timeout.py  user_context.py  user_id.py  validation.py  versioning.py
app/models/: __init__.py  models.py
app/modules/: case_builder.py
app/routers/: __init__.py  actions.py  adaptive_ui.py  auth.py  briefcase.py  calendar.py  case_builder.py  cloud_sync.py  complaints.py  context_loop.py  copilot.py  crawler.py  dashboard.py  documents.py  enterprise_dashboard.py  eviction_defense.py  form_data.py  guided_intake.py  health.py  intake.py  law_library.py  progress.py  recognition.py  registry.py  research.py  role_ui.py  role_upgrade.py  search.py  setup.py  storage.py  tenancy_hub.py  timeline.py  vault.py  vault_engine.py  websocket.py  zoom_court.py
app/services/: __init__.py  action_router.py  adaptive_ui.py  azure_ai.py  case_auto_creation.py  context_loop.py  crawler.py  document_intake.py  document_pipeline.py  document_recognition.py  document_registry.py  document_training.py  event_extractor.py  form_data.py  gemini_ai.py  law_engine.py  progress_tracker.py  timeline_builder.py  user_service.py  vault_engine.py  vault_upload_service.py
app/templates/: base.html
data/case_outputs/: AMENDED_COUNTERCLAIM_19AV-CV-25-3477.txt  COUNTERCLAIM_19AV-CV-25-3477.txt  MOTION_TO_COMPEL_VIDEO_19AV-CV-25-3477.txt  TIMELINE_FILL_IN_GAPS.txt  timeline_19AV-CV-25-3477.json  timeline_19AV-CV-25-3477.txt
data/laws/: laws.json
data/registry/: registry.json
data/vault_index/: vault_index.json
docs/: OAUTH_SETUP.md  SEMPTIFY_MODULES_REPORT.md  USER_GUIDE.md
installer/: Create-Distribution.bat  DISTRIBUTION_README.md  INSTALL_INSTRUCTIONS.html  Install-Semptify.bat  WINDOWS_INSTALL_GUIDE.md  create_distribution.ps1  download_dependencies.ps1  install_semptify.ps1
scripts/: SemptifyLauncher.ps1  add_sample_docs.py  backup.py  build_case_timeline.py  check_system.py  cleanup_duplicates.py  download_forms.py  eviction_crawler.py  mn_court_crawler.py  populate_court_case.py  validate.py  validate_system.py
sdk/: README.md  __init__.py  auth.py  base.py  briefcase.py  client.py  complaints.py  copilot.py  documents.py  exceptions.py  timeline.py  vault.py
semptify_dakota_eviction/: All-in-one PowerShell bootstrap.ps1  README.md  requirements.txt  run.py  setup_semptify_eviction.ps1
semptify_dakota_eviction/app/: main.py
static/: briefcase.html  calendar-v2.html  calendar.html  cases.html  command_center.html  complaints.html  complete-journey.html  contacts.html  counterclaim.html  court_packet.html  crawler.html  crawler_control.html  crisis_intake.html  dakota_defense.html  dashboard-v2.html  dashboard.html  document_calendar.html  document_intake.html  documents-v2.html  documents.html  enterprise-dashboard.html  eviction_answer.html  exposure.html  focus.html  fraud.html  funding_search.html  hearing_prep.html  home.html  index-simple.html  index.html  intake.html  interactive-timeline.html  journey.html  law_library.html  legal_analysis.html  letter_builder.html  mission_control.html  motions.html  my_tenancy.html  recognition_demo.html  (+14 more)
static/_archive/: document_intake_backup.html  documents-v2.html  documents_simple.html  nav_demo.html
static/advocate/: clients.html  index.html  intake.html  queue.html
static/components/: header.html  navbar.html  sidebar.html
static/css/: shared-nav.css
static/js/: app.js  case-context.js  emotion-integration.js  header.js  pwa-init.js  reminders.js  shared-nav.js
static/legal/: cases.html  conflicts.html  filings.html  (+2 more)
tests/: conftest.py  test_all_endpoints.py  test_api_endpoints.py  test_basic.py  test_case_builder.py  test_copilot.py  test_court_learning.py  test_court_procedures.py  test_document_intake.py  test_document_registry.py  test_documents.py  test_eviction.py  test_health.py  test_integration.py  test_storage.py  test_timeline_calendar.py  test_vault_engine.py  test_websocket.py
tools/: app_crawler.py  crawl_report.json  crawler_issues.json  crawler_report.html  gui_crawler.py
(+71 files in other folders)
