[project]
name = "semptify"
version = "5.0.0"
description = "Tenant Rights Protection Platform - FastAPI Backend"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Semptify Team", email = "support@semptify.com"}
]
keywords = ["tenant-rights", "legal-tech", "fastapi", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Legal",
]

[project.urls]
Homepage = "https://github.com/Semptify/Semptify-FastAPI"
Documentation = "https://github.com/Semptify/Semptify-FastAPI/blob/main/PRODUCTION.md"
Repository = "https://github.com/Semptify/Semptify-FastAPI"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Ruff Configuration (Fast Python Linter & Formatter)
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
    "static/_archive",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from (too noisy)
    "S101",   # assert statements (used in tests)
    "S104",   # bind to all interfaces (needed for Docker)
    "S105",   # hardcoded password (false positives in configs)
    "S106",   # hardcoded password (false positives in configs)
    "ARG001", # unused function argument (common in FastAPI)
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]
"alembic/**/*.py" = ["F401", "E402"]
"app/main.py" = ["E402"]  # imports not at top

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = [
    "-ra",                    # show extra test summary
    "--strict-markers",       # fail on unknown markers
    "-q",                     # quiet mode
]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/__init__.py",
    "alembic/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 50
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Black Configuration (if used instead of ruff format)
# =============================================================================

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | alembic/versions
    | static/_archive
)/
'''

# =============================================================================
# MyPy Configuration (Optional Type Checking)
# =============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
exclude = [
    "alembic/",
    "tests/",
    "static/",
]

[[tool.mypy.overrides]]
module = "app.routers.*"
ignore_errors = true
